src/objects/CS_Product_Documentation__c.object
<CustomObject>
    <fields>
        <fullName>CS_DocumentId__c</fullName>
        <label>Content Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_External_URL__c</fullName>
        <label>External URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CS_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Language__c</fullName>
        <formula>TEXT(CS_Release_Version__r.CS_Localization__c)</formula>
        <label>Localization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Publish_Status__c</fullName>
        <formula>IF(CS_IsActive__c, IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Publish Status</inlineHelpText>
        <label>Publish Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Release_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Version</label>
        <referenceTo>CS_Release__c</referenceTo>
        <relationshipLabel>Product Documentation</relationshipLabel>
        <relationshipName>Product_Documentation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Type__c</fullName>
        <label>Documentation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Release Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <formula>CS_Release_Version__r.Name</formula>
        <inlineHelpText>Release Version</inlineHelpText>
        <label>Product Version</label>
        <type>Text</type>
    </fields>
    <label>Product Documentation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CS_IsActive__c</columns>
        <columns>CS_Release_Version__c</columns>
        <columns>CS_Type__c</columns>
        <columns>CS_External_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Documentation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Documentation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CS_URLRequired_Documentation</fullName>
        <active>false</active>
        <description>External URL required for Documentation</description>
        <errorConditionFormula>AND(TEXT(CS_Type__c)=&apos;Documentation&apos;, ISBLANK(CS_External_URL__c) 
)</errorConditionFormula>
        <errorMessage>Please Add URL for Documentation</errorMessage>
    </validationRules>
</CustomObject>